5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1764_1576.log
== TEST (2019-05-29 20:43:38) 
-- CODE:
from numpy import *
v1 = array(int(input("Digite: ")))
v2 = array(int(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1]||v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1]||v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1]||v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
File "XXXX", line 8
    if (v1[cont-1]||v2[cont-1] == 1122):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:43:49) 
-- CODE:
from numpy import *
v1 = array(int(input("Digite: ")))
v2 = array(int(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1]||v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1]||v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1]||v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1]||v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
File "XXXX", line 8
    if (v1[cont-1]||v2[cont-1] == 1122):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:45:10) 
-- CODE:
from numpy import *
v1 = array(int(input("Digite: ")))
v2 = array(int(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1] * 100 + v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:45:33) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1] * 100 + v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:46:02) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1] * 100 + v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont - 1)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:46:25) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1] * 100 + v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont - 1)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:46:48) 
-- CODE:
from numpy import *
v1 = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
cont = 1
cont1 = 0
cont2 = 0
while (cont <= size(v1)):
	if (v1[cont-1] * 100 + v2[cont-1] == 1122):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 1133):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2211):
		cont1 = cont1 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 2233):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3311):
		cont2 = cont2 + 1
	elif (v1[cont-1] * 100 + v2[cont-1] == 3322):
		cont1 = cont1 + 1
	cont = cont + 1
print(cont - 1)
if (cont1 > cont2):
	print('EUSAPIA')
elif (cont1 < cont2):
	print('BARSANULFO')
else:
	print('EMPATE')
		
	
	
-- EXECUTION TIME:
0.617777
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
